# FAQ_RAG_llm_bot

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_STATUS.md  RAG_AGENT_WORKFLOW.md  README.md  docker-compose.langfuse.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  models.env  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/scripts/: _count_tokens.py  _gen_charts.py  _gen_notebook.py  _hybrid_retriever.py  entrypoint.sh  eval_config.py  eval_rag.py  generate_kg.py  generate_testset.py  ingest_hybrid.py  ingest_local.py  langfuse_set_prices.py  ocr_image_pdf.py  seed_admin.py  seed_bot.py
backend/tests/: __init__.py  conftest.py  test_actor.py  test_auth_service.py  test_chat_gateway_integration.py  test_composite_adapter.py  test_config.py  test_eval_config.py  test_gateway_classifier.py  test_gateway_core.py  test_gateway_injection.py  test_gateway_rate_limit.py  test_llm_factory.py  test_loader.py  test_observability.py  test_openrouter_adapter.py
bot/: Dockerfile  pyproject.toml
bot/app/: client.py  config.py  formatting.py  handlers.py  main.py
bot/tests/: test_client.py  test_formatting.py  test_handlers.py
docs/plans/: 2026-02-25-faq-rag-bot-design.md  2026-02-25-faq-rag-bot-implementation.md  2026-03-02-auth-fix-design.md  2026-07-06-uv-intro.md  (+19 more)
frontend/: .gitignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  nginx.conf  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.json  vite.config.ts
notebooks/: 01_experiment_analysis.ipynb
(+156 files in other folders)
