[project]
name = "faq-rag-telegram-bot"
version = "0.1.0"
description = "Telegram-бот поверх FAQ RAG (E1)"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4",
    "httpx>=0.27",
    "pydantic-settings>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

# Бот запускается из исходников — не пакет (uv не пытается его собирать).
[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
